--- a/static/index.html
+++ b/static/index.html
@@ -7,6 +7,7 @@
     <body>
         <ul class="message_list">
         </ul>
+        <script src="/vendor/mithril.min.js"></script>
         <script src="/vendor/zepto.min.js"></script>
         <script src="/javascript/main.js"></script>
     </body>
