--- a/static/index.html
+++ b/static/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8" />
     </head>
     <body>
-        <script src="/vendor/mithril.min.js"></script>
+        <script src="/vendor/mithril.js"></script>
         <script src="/javascript/main.js"></script>
     </body>
 </html>
